--- a/aula 04/ex001.html
+++ b/aula 04/ex001.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meu Primeiro Programa</title>
+    <style>
+        body {
+            background-color: rgb(102, 150, 212);
+            color: white;
+            font: normal 25pt Arial, sans-serif;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Olá, Mundo!</h1>
+    <p>Já me livrei da maldição</p>
+    <script>
+        window.alert('Minha primeira mensagem!')
+        window.confirm('Está gostando de JS?')
+        window.prompt('Qual é o seu nome?')
+    </script>
 </body>
 </html>
