--- a/aula 04/ex001.html
+++ b/aula 04/ex001.html
@@ -19,7 +19,8 @@
     <script>
         window.alert('Minha primeira mensagem!')
         window.confirm('Está gostando de JS?')
-        window.prompt('Qual é o seu nome?')
+        var nome = window.prompt('Qual é o seu nome?')
+        window.alert('Oi, ' + nome + '!')
     </script>
 </body>
 </html>
